# Team-17

./: .gitignore  App.cpp  App.h  BuildDecorRepair.h  Building.h  CMakeLists.txt  Citizen.cpp  CityBlock.cpp  CityBlock.h  CollectTaxCommand .h  ComOffice.h  ComShop.h  Commercial.cpp  Commercial.h  DemoMain.cpp  Doxyfile  FactCommercial.h  FactIndustrial.h  FactLandmarks.h  FactResidential.h  FactoryBuilding.h  Government.cpp  IndWarehouse.h  Industrial.h  Industrial2.h  LandMonument.h  LandPark.h  Landmark.h  Main.cpp  Main.h  MyMap.cpp  MyMap.h  MyQueue.cpp  MyQueue.h  MySet.cpp  MySet.h  README.md  ResEstate.h  ResFlat.h  RoadIterator.h  (+14 more)
Buildings/: BuildDecorEconomic.CPP  BuildDecorEconomic.h  BuildDecorRepair.cpp  BuildDecorRepair.h  BuildDecorUpgrade.cpp  BuildDecorUpgrade.h  Building.cpp  Building.h  BuildingDecorator.cpp  BuildingDecorator.h  ComMall.cpp  ComMall.h  ComOffice.cpp  ComOffice.h  ComShop.cpp  ComShop.h  Commercial.cpp  Commercial.h  FactCommercial.cpp  FactCommercial.h  FactIndustrial.cpp  FactIndustrial.h  FactLandmarks.cpp  FactLandmarks.h  FactResidential.cpp  FactResidential.h  FactService.cpp  FactService.h  FactoryBuilding.h  IndFactory.cpp  IndFactory.h  IndPlant.cpp  IndPlant.h  IndWarehouse.cpp  IndWarehouse.h  Industrial.cpp  Industrial.h  LandCCenter.cpp  LandCCenter.h  LandMark.cpp  (+26 more)
COS214_Project_GUI/: CMakeLists.txt  DraggableFrame.h  DraggableRoad.h  MovingFrame.cpp  framecontainer.h  homepage.cpp  homepage.h  homepage.h.autosave  homepage.ui
Citizens/: Citizen.cpp  Citizen.h  CitizenNameGen.cpp  CitizenNameGen.h  CitizenState.h  CitizensIncludes.h  CityBlock.cpp  CityBlock.h  CityCentralMediator.cpp  CityCentralMediator.h  CityMediator.h  Discontent.h  Happy.h  Indifferent.h  Upset.h  (+3 more)
(+5403 files in other folders)
